--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^6.1.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
